<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.coffeehouse.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_maincourse"
        android:name="com.example.coffeehouse.ui.gallery.GalleryFragment"
        android:label="@string/menu_maincourse"
        tools:layout="@layout/fragment_maincourse" />

    <fragment
        android:id="@+id/nav_starter"
        android:name="com.example.coffeehouse.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_starter"
        tools:layout="@layout/fragment_starter" />

    <fragment
        android:id="@+id/nav_dessert"
        android:label="@string/menu_dessert"/>
</navigation>