<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/frontpgeback"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#684A4949">
        <LinearLayout
                android:id="@+id/guideline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/loginuiimage"
                app:civ_border_color="#D88738"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/cafe_house"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="80sp"
                android:textStyle="bold"
                app:fontFamily="cursive" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_gradient"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_gradient"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/register"
                android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#00FFFFFF"
                    android:text="@string/already_login"
                    android:textColor="#ffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

    </ScrollView>

</RelativeLayout>