<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/profileimg"
                app:civ_border_color="#F4973C"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@string/upload_photo"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/editextborder"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="#3E020202"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/editextborder"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="#3E020202"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/editextborder"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="#3E020202"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/editextborder"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="#3E020202"
                android:textSize="20sp" />

            <Button
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_gradient"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:background="#050505" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/or_with"
                    android:textAlignment="center"
                    android:textColor="#070606"
                    android:textColorHint="#020202"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="#050505" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/facebookimage"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/facebookicon"
                    app:civ_border_color="#F4973C" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/googleplusimage"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/googleplusicon"
                    app:civ_border_color="#F4973C" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/twitterimage"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/twitterimg"
                    app:civ_border_color="#F4973C" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/already_have_account_login"
                android:textColor="#0B0A0A" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
