<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical" >


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/loginuiimage"
                app:civ_border_color="#D88738"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/cafe_house"
                android:textAlignment="center"
                android:textColor="#D0B85E0F"
                android:textSize="60sp"
                android:textStyle="bold"
                app:fontFamily="cursive" />


            <EditText
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:background="@drawable/editextborder"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="#3E020202"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/editextborder"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="#3E020202"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_gradient"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#ffff"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:background="#050505" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/or_with"
                    android:textAlignment="center"
                    android:textColor="#070606"
                    android:textColorHint="#020202"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="#050505" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/facebookimage"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/facebookicon"
                    app:civ_border_color="#F4973C" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/googleplusimage"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/googleplusicon"
                    app:civ_border_color="#F4973C" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/twitterimage"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/twitterimg"
                    app:civ_border_color="#F4973C" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Don't have an account? Register"
                android:textColor="#0B0A0A" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>